--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="flex-container movies wrap-reverse">
             <div class="movie-text flex-column">
-                <h1>GTA V</h1>
+                <h1><i>GTA V</i></h1>
                 <p>If you don't know about GTA 5, what are you doing? check this out</p>
                 <div>
                     <a target="blank" href="https://youtu.be/QkkoHAzjnUs?si=RXZbhErLiw0U_2S2">
@@ -45,7 +45,7 @@
                     alt="avengers-assembly-image">
             </div>
             <div class="movie-text flex-column">
-                <h1>L.A. Noire</h1>
+                <h1><i>L.A. Noire</i></h1>
                 <p>It's a game about 
                     1940s detective solving crimes through investigation and interrogation, stunningly realistic.</p>
                 <div>
@@ -58,7 +58,7 @@
         <hr>
         <div class="flex-container movies wrap-reverse">
             <div class="movie-text flex-column">
-                <h1>RED DEAD REDEMPTION II</h1>
+                <h1><i>RED DEAD REDEMPTION II</i></h1>
                 <p>Epic Wild West tale, Arthur Morgan's journey, outlaws, redemption, breathtaking landscapes. A must play.</p>
                 <div>
                     <a target="blank" href="https://youtu.be/eaW0tYpxyp0?si=SqxeqEd_U3uI5Ro8">
